kubeadm/demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - test.shitangdama.cn
    secretName: quickstart-example-tls
  rules:
  - host: test.shitangdama.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
